# rust-raytracer

./: Cargo.toml  ray.sh
rayapp/: Cargo.toml
rayapp/src/: main.rs
rayapp/src/util/: export.rs  mod.rs
raylib/: Cargo.toml  b.sh
raylib/src/: lib.rs  mat4.rs  prelude.rs  vec3.rs
raylib/src/geometry/: bbox.rs  prim.rs
raylib/src/geometry/prims/: plane.rs  sphere.rs  triangle.rs
raylib/src/light/lights/: pointlight.rs  spherelight.rs
raylib/src/material/: texture.rs
raylib/src/material/materials/: cooktorrancematerial.rs  phongmaterial.rs
raylib/src/material/textures/: checkertexture.rs  uvtexture.rs
raylib/src/my_scene/: cornell.rs  mod.rs
raylib/src/raytracer/: intersection.rs  octree.rs  ray.rs  renderer.rs
raylib/src/raytracer/compositor/: colorrgba.rs  surface.rs
raylib/src/scene/: camera.rs  scene.rs
raylib/src/util/: export.rs
src/: main.rs  vec3.rs
src/geometry/: bbox.rs  mod.rs  prim.rs
src/geometry/prims/: plane.rs  sphere.rs  triangle.rs
src/light/: light.rs
src/light/lights/: spherelight.rs
src/material/: material.rs
src/material/materials/: cooktorrancematerial.rs  flatmaterial.rs  phongmaterial.rs
src/material/textures/: uvtexture.rs
src/my_scene/: cornell.rs  mod.rs
src/raytracer/: intersection.rs  mod.rs  octree.rs  ray.rs  renderer.rs
src/raytracer/compositor/: colorrgba.rs  surfacefactory.rs  surfaceiterator.rs
src/util/: export.rs  mod.rs
